--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </div>
             <ul>
                 <li><a href="index.html">首页</a></li>
-                <li><a href="#">军训专题</a></li>
-                <li><a href="#">邮子攻略</a></li>
-                <li><a href="#">重邮数据</a></li>
-                <li><a href="#">重邮风采</a></li>
-                <li><a href="#">迎新活动</a></li>
+                <li><a href="train.html">军训专题</a></li>
+                <li><a href="strategy.html">邮子攻略</a></li>
+                <li><a href="data.html">重邮数据</a></li>
+                <li><a href="mien.heml">重邮风采</a></li>
+                <li><a href="activity.html">迎新活动</a></li>
                 <li><a href="http://hongyan.cqupt.edu.cn/aboutus/">关于我们</a></li>
             </ul>
         </div>
