添加军训的两个板块

--- a/train.html
+++ b/train.html
@@ -66,10 +66,99 @@
                         </div>
                     </div>
                     <div class="mi_mid1">
-                        
+                        <div class="video">
+                            <video width="870x" height="510px" controls="controls" poster='imgs/preload1.png' data-setup='{"aspectRatio":"870:510"}'>
+                                <source src="https://vjs.zencdn.net/v/oceans.mp4" type='video/mp4' />
+                                <source src="https://vjs.zencdn.net/v/oceans.webm" type='video/webm'/>
+                            </video>
+                        </div>
+                        <div class="video_list">
+                            <ul>
+                                <li>
+                                    <span class="list_title">15年军训视频</span>
+                                    <div class="zhezhao"></div>
+                                    <img src="imgs/video_list1.png">
+                                </li>
+                                <li>
+                                    <span class="list_title">16年军训视频</span>
+                                    <div class="zhezhao"></div>
+                                    <img src="imgs/video_list2.png">
+                                </li>
+                                <li>
+                                    <span class="list_title">15届动员大会</span>
+                                    <div class="zhezhao"></div>
+                                    <img src="imgs/video_list3.png">
+                                </li>
+                                <li>
+                                    <span class="list_title">16届动员大会</span>
+                                    <div class="zhezhao"></div>
+                                    <img src="imgs/video_list4.png">
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="mi_mid2" style="display: none;">
-                        
+                        <div id="fc_box">
+                            <div class="fc_head">
+                                <div class="leftArrow"></div>
+                                <div class="fc_head_title">五营</div>
+                                <div class="rightArrow"></div>
+                            </div>
+                            <div class="fc_mid">
+                                <ul class="fc_content clearfix" style="left: 0;">
+                                    <li class="fc_li">
+                                        <ul class=".clearfix">
+                                            <li class="row1">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row2">
+                                                 <div class="row_wrap"></div>
+                                                 <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row3">
+                                                 <div class="row_wrap"></div>
+                                                 <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row4">
+                                                 <div class="row_wrap"></div>
+                                                 <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="fc_pic row5">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row6">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row7">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row8">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                            <li class="row9">
+                                                <div class="row_wrap"></div>
+                                                <div class="semi-circle"></div>
+                                            </li>
+                                           <!--  <li class="row"></li>
+                                            <li></li>
+                                            <li></li> -->
+                                        </ul>
+                                    </li>
+                                    <li class="fc_li2"></li>
+                                    <li class="fc_li3">3</li>
+                                    <li class="fc_li4">4</li>
+                                    <li class="fc_li5">5</li>
+                                </ul>
+                            </div>
+                            <div class="fc_bar">
+                                <div class="fc_scroll"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="mi_mid3" style="display: none;">
                         <ul class="mid3_title">
