--- a/train.html
+++ b/train.html
@@ -110,49 +110,67 @@
                                         <ul class=".clearfix">
                                             <li class="row1">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                             <li class="row2">
                                                  <div class="row_wrap"></div>
-                                                 <div class="semi-circle"></div>
+                                                 <div class="semi-circle">
+                                                     <p>二连一排</p>
+                                                 </div>
                                             </li>
                                             <li class="row3">
                                                  <div class="row_wrap"></div>
-                                                 <div class="semi-circle"></div>
+                                                 <div class="semi-circle">
+                                                     <p>二连一排</p>
+                                                 </div>
                                             </li>
                                             <li class="row4">
                                                  <div class="row_wrap"></div>
-                                                 <div class="semi-circle"></div>
+                                                 <div class="semi-circle">
+                                                     <p>二连一排</p>
+                                                 </div>
                                             </li>
                                             <li class="fc_pic row5">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                             <li class="row6">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                             <li class="row7">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                             <li class="row8">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                             <li class="row9">
                                                 <div class="row_wrap"></div>
-                                                <div class="semi-circle"></div>
+                                                <div class="semi-circle">
+                                                    <p>二连一排</p>
+                                                </div>
                                             </li>
                                            <!--  <li class="row"></li>
                                             <li></li>
                                             <li></li> -->
                                         </ul>
                                     </li>
-                                    <li class="fc_li2"></li>
+                                    <!-- <li class="fc_li2"></li>
                                     <li class="fc_li3">3</li>
                                     <li class="fc_li4">4</li>
-                                    <li class="fc_li5">5</li>
+                                    <li class="fc_li5">5</li> -->
                                 </ul>
                             </div>
                             <div class="fc_bar">
