--- a/activity.html
+++ b/activity.html
@@ -93,9 +93,53 @@
                         </div>
                     </div>
                     <div class="mi_mid2" style="display: none;">
-                        <div class="older_help">
-                            
+                        <!-- <div class="older_help"></div> -->
+                        <div class="mi_tittle">
+                            <ul class="classification clearfix">
+                                <li class="all">
+                                    <div>全部</div>
+                                    <div class="underline"></div>
+                                </li>
+                                <li class="learn">
+                                    <div>学习类</div>
+                                    <div class="underline"></div>
+                                    </li>
+                                <li cals>
+                                    <div>生活类</div>
+                                    <div class="underline"></div>
+                                </li>
+                                <li>
+                                    <div>活动类</div>
+                                    <div class="underline"></div>
+
+                                </li>
+                                <li>
+                                    <div>组织类</div>
+                                    <div class="underline"></div>
+                                </li>
+                                <li class="other">
+                                    <div>其他类</div>
+                                    <div class="underline"></div>
+                                </li>
+                            </ul>
                         </div>
+                        <div class="paging_box">
+                            <div class="question">
+                                <div class="content">提问内容</div>
+                                <div class="questioner">提问者</div>
+                                <div class="time">时间</div>
+                            </div>
+                            <div class="ul_container">
+                                <ul id="ul1"></ul>
+                                <ul id="ul2"></ul>
+                                <div id="ul3"></div>
+                            </div>
+                            
+                            <div id="div1">
+
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -118,5 +162,6 @@
     <script src="js/daojishi.js"></script>
     <script src="js/goTop.js"></script>
     <script src="js/smile.js"></script>
+    <script src='js/activity.js'></script>
 </body>
 </html>
